# libbdm

./: BdmTest.cpp  CMakeLists.txt
src/bdm/: BdmFile.cpp  BdmFile.hpp  BdmLoader.cpp  BdmLoader.hpp  CMakeLists.txt
src/bdminfo/: BdmInfo.cpp  CMakeLists.txt
